--- a/public/tanks.html
+++ b/public/tanks.html
@@ -16,6 +16,23 @@
 </head>
     <body>
         <form action="/GetEm" method="post">
+            <!--CAM'S CODE-->
+            <div id="loadingScreen" class="loading-screen">
+                <div id="blueBox1" class="player-blue" style="top:30%; left:5%;"></div>
+                <div id="blueBox2" class="player-blue" style="top:30%; left:25%;"></div>
+                <div id="blueBox3" class="player-blue" style="top:60%; left:5%;"></div>
+                <div id="blueBox4" class="player-blue" style="top:60%; left:25%;"></div>
+                
+                <div id="redBox1" class="player-red" style="top:30%; left:60%;"></div>
+                <div id="redBox2" class="player-red" style="top:30%; left:80%;"></div>
+                <div id="redBox3" class="player-red" style="top:60%; left:60%;"></div>
+                <div id="redBox4" class="player-red" style="top:60%; left:80%;"></div>
+            </div>
+            <h1 id="countDown" class="countdown"></h1>
+            <h1 id="blueTeamName" class="team-names" style="color:blue; left: 20px;">Blue Team</h1>
+            <h1 id="redTeamName" class="team-names" style="color:red; left: 345px;">Red Team</h1>
+            <div id="midLine" class="middle-line"></div>
+            <!--CAM'S CODE-->
             <h1>Express Tanks <input onclick="Restart()" type="button" value="Restart"></h1>
             <input id="playerName" name="PlayerName" type="hidden" value="<%= PlayerName %>" />
             <div id="sketch-holder">
