--- a/public/tanks.html
+++ b/public/tanks.html
@@ -18,6 +18,7 @@
         <form action="/GetEm" method="post">
             <!--CAM'S CODE-->
             <div id="lobbyScreen" class="lobby-screen">
+                <!--starting blocks-->
                 <div class="player-blue" style="top:30%; left:5%;"></div>
                 <div class="player-blue" style="top:30%; left:25%;"></div>
                 <div class="player-blue" style="top:60%; left:5%;"></div>
@@ -28,6 +29,7 @@
                 <div class="player-red" style="top:60%; left:60%;"></div>
                 <div class="player-red" style="top:60%; left:80%;"></div>
             </div>
+            <!--tank names-->
             <p id="blueName1" class="player-names" style="top:332px; left:16px"></p>
             <p id="blueName2" class="player-names" style="top:332px; left:135px"></p>
             <p id="blueName3" class="player-names" style="top:510px; left:16px"></p>
@@ -39,7 +41,7 @@
             <p id="redName4" class="player-names" style="top:510px; left:465px"></p>
 
             <h1 id="countDown" class="countdown"></h1>
-
+            <!--top level headers-->
             <h1 id="blueTeamName" class="team-names" style="color:blue; left: 20px;">Blue Team</h1>
             <h1 id="redTeamName" class="team-names" style="color:red; left: 345px;">Red Team</h1>
             <div id="midLine" class="middle-line"></div>
